@@ -1,4 +1,3 @@
-import org.hidetake.gradle.swagger.generator.GenerateSwaggerCode
 import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
@@ -7,7 +6,7 @@ plugins {
     id 'com.google.cloud.tools.jib' version '3.2.1' apply false
     id "org.sonarqube" version "3.4.0.2513" apply false
     id 'idea'
-    id 'org.hidetake.swagger.generator' version '2.19.2' apply false
+    id "org.openapi.generator" version "6.0.1" apply false
     id 'java'
     id 'com.diffplug.spotless' version '6.8.0'
 }
@@ -21,7 +20,6 @@ subprojects {
     apply plugin: 'idea'
     apply plugin: 'java'
     apply plugin: 'com.diffplug.spotless'
-    apply plugin: 'org.hidetake.swagger.generator'
 
     ext {
         artifactGroup = "${group}.${rootProject.name}"
@@ -38,10 +36,6 @@ subprojects {
             dependency 'io.swagger.core.v3:swagger-annotations:2.1.13'
             dependency 'org.openapitools:openapi-generator-cli:6.0.1'
         }
-    }
-
-    tasks.withType(GenerateSwaggerCode).all {
-        jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED'] // for jvm 16+
     }
 }
 
